--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "homepage": "https://github.com/jsip/bugs-bunny#readme",
   "dependencies": {
+    "@rollup/plugin-replace": "^4.0.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "sveltestrap": "^5.7.0"
   }
 }
