--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte": "^3.46.2",
     "svelte-check": "^2.3.0",
     "svelte-preprocess": "^4.10.2",
+    "tslib": "^2.4.0",
     "typescript": "^4.3.4"
   },
   "repository": {
